Update ktlint.setup.gradle.kts