@@ -10,7 +10,7 @@ dependencies {
 }
 
 val outputDir = "${project.layout.buildDirectory}/reports/ktlint/"
-val inputFiles = projectDir
+val inputFiles = project.fileTree("src") { include("**/*.kt") }
 
 val ktlintCheck by tasks.creating(JavaExec::class) {
     inputs.files(
@@ -21,29 +21,33 @@ val ktlintCheck by tasks.creating(JavaExec::class) {
     )
     outputs.dir(outputDir)
 
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
     description = "Check Kotlin code style."
     classpath = ktlint
     mainClass.set("com.pinterest.ktlint.Main")
     // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
     val composeRules = "$rootDir/kotlin-static-analysis-tools/ktlint/ktlint-compose-0.3.0-all.jar"
     val editorConfig = "$rootDir/kotlin-static-analysis-tools/ktlint/.editorconfig"
-    val params = listOf(
-        "--editorconfig",
-        editorConfig,
-        "-R",
-        composeRules,
-        "--format"
-    )
-    args = params + listOf("**/*.kt", "!**/build/**", "!**/resources/**")
+    val params =
+        listOf(
+            "--editorconfig",
+            editorConfig,
+            "-R",
+            composeRules,
+            "--format",
+        )
+    args = params + listOf("**/src/**/*.kt", "**.kts", "!**/build/**", "!**/resources/**")
 }
 
 val ktlintFormat by tasks.creating(JavaExec::class) {
     inputs.files(inputFiles)
     outputs.dir(outputDir)
 
-    description = "Fix Kotlin code style deviations."
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    description = "Check Kotlin code style and format"
     classpath = ktlint
     mainClass.set("com.pinterest.ktlint.Main")
+    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
     // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
-    args = listOf("-F", "src/**/*.kt")
+    args = listOf("-F", "**/src/**/*.kt", "**.kts", "!**/build/**")
 }
